--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- Set a new descriptive title replacing "website" -->
+    <title>Horiseon: Social Solution Services</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    <!-- <div class="header"> 
+        changed div to semantic element - header -->
+    <header>
+        <!-- changed span to semantic element - em -->
+        <h1>Hori<em>seo</em>n</h1>
+        <!-- changed div to semantic element - nav -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,60 +28,88 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    </header>
+    
+    <!-- <div class="hero"></div>
+        changed dive to semantic element - figure -->
+    <figure class="banner"></figure>
+    <!-- <div class="content"
+        changed div to semantic element - main -->
+    <main>
+        <!-- replaced class with id so that the navigatin links work 
+        swithced divs to section elements
+        removed all classes
+        added alt text to images -->
+        <section id="search-engine-optimization">
+            <figure>
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a notepad on a desk surrounded by writing implements, the notepad contains concepts for Search Engine Customisation. The concepts surround the word 'SEO' in a word cloud, including the words: 'Content', 'Headings', 'Mobile Compatibility', 'Social Media', 'Link Building, and 'Backlink'" />
+            </figure>
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+            The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
+        </section>
+        <section id="online-reputation-management">
+            <figure>
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of a person reviewing graphs on their laptop. There is a large heading above the various graphs titled 'Reputation'." />
+            </figure>
+                <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing">
+            <figure>
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A workdesk surrounded by people. The desk is filled with icons representing internet GUI as well as speech bubbles containing social media terms, including: 'Like', 'Tweet', 'Share', and 'Media'" />
+            </figure>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </section>
+    </main>
+
+    <!-- <div class="benefits"> 
+        replaced class with semantic element - aside -->
+    <aside>
+        <!-- swithced divs to section elements 
+        added alt text to images-->
+        <section class="benefits">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <figure>
+                <img src="./assets/images/lead-generation.png" alt="Black icon depicting a cog funneled down into a dollar coin."/>
+            </figure>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefits">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <figure>
+                <img src="./assets/images/brand-awareness.png" alt="Black icon depicting business person with a lightbulb for a head."/>
+            </figure>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefits">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <figure>
+                <img src="./assets/images/cost-management.png" alt="Black icon depicting a cog surrounded by three dollar coins."/>
+            </figure>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        </section>
+    </aside>
+    <!-- <div class="footer"> 
+        changed div to semantic element - footer -->
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
