fixed a typo in html comment

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     
     <!-- <div class="hero"></div>
-        changed dive to semantic element - figure -->
+        changed div to semantic element - figure -->
     <figure class="banner"></figure>
     <!-- <div class="content"
         changed div to semantic element - main -->
