Deleted Unnecessary Comments from HTML and CSS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <!-- <div class="header"> 
-        changed div to semantic element - header -->
+    <!-- changed div to semantic element - header -->
     <header>
         <!-- changed span to semantic element - em -->
         <h1>Hori<em>seo</em>n</h1>
@@ -30,11 +29,9 @@
         </div>
     </header>
     
-    <!-- <div class="hero"></div>
-        changed div to semantic element - figure -->
+    <!-- changed div to semantic element - figure -->
     <figure class="banner"></figure>
-    <!-- <div class="content"
-        changed div to semantic element - main -->
+    <!-- changed div to semantic element - main -->
     <main>
         <!-- replaced class with id so that the navigatin links work 
         swithced divs to section elements
@@ -69,8 +66,7 @@
         </section>
     </main>
 
-    <!-- <div class="benefits"> 
-        replaced class with semantic element - aside -->
+    <!-- replaced class with semantic element - aside -->
     <aside>
         <!-- swithced divs to section elements 
         added alt text to images-->
@@ -102,8 +98,7 @@
             </p>
         </section>
     </aside>
-    <!-- <div class="footer"> 
-        changed div to semantic element - footer -->
+    <!-- changed div to semantic element - footer -->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
